--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 pandas==2.2.2
+numpy==1.26.4
 scikit-learn==1.4.2
 imbalanced-learn==0.12.2
 joblib==1.4.0
-numpy==1.26.4
 flask
 requests
-xgboost
+xgboost==2.0.3
+gunicorn
