--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pandas==2.2.2
+pandas==2.1.4
 numpy==1.26.4
-scikit-learn==1.4.2
-imbalanced-learn==0.12.2
-joblib==1.4.0
-flask
-requests
-xgboost==2.0.3
-gunicorn
+scikit-learn==1.3.2
+imbalanced-learn==0.11.0
+joblib==1.3.2
+flask==2.3.3
+requests==2.31.0
+xgboost==1.7.6
+gunicorn==21.2.0
